# covariance-denoiser

./: .gitignore  GUIDE_OVERVIEW.md  GUIDE_ROOT.md  README.md  pyproject.toml
blog/: generate_charts.py  index.fr.md  index.md  outline.md
blog/data/: fold_predictions.csv  metrics.csv  model_coefficients.csv
data/raw/: raw_prices.metadata.json  raw_prices.parquet
docs/reference/: math.md  system_design.md
docs/user/: run_demo.md
notebooks/: 01_offline_research_pipeline.ipynb
scripts/: GUIDE_scripts.md  run_offline_demo.sh  run_tests.sh
src/: GUIDE_src.md
src/covariance_denoiser/: GUIDE_covariance_denoiser.md  __init__.py  __main__.py  cli.py
src/covariance_denoiser/artifacts/: __init__.py  export.py
src/covariance_denoiser/data/: __init__.py  clickhouse_refresh.py  prices.py  raw_cache.py
src/covariance_denoiser/estimators/: __init__.py  rmt.py  sample.py  shrinkage.py
src/covariance_denoiser/evaluation/: __init__.py  metrics.py
src/covariance_denoiser/features/: __init__.py  covariance_features.py
src/covariance_denoiser/models/: __init__.py  baselines.py  walk_forward.py
src/covariance_denoiser/pipelines/: offline_demo.py
src/covariance_denoiser/targets/: __init__.py  realized_variance.py
tests/: GUIDE_tests.md
tests/integration/pipelines/: test_offline_demo.py
tests/unit/data/: test_cache_policy.py  test_prices.py
tests/unit/features/: test_covariance_features.py
tests/unit/models/: test_walk_forward.py
tests/unit/notebooks/: test_walkthrough_contract.py
tests/unit/targets/: test_realized_variance.py
